# spotflowd

./: .gitignore  Cargo.toml  Cross.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
config/: spotflowd.toml.example
src/: buffer.rs  config.rs  log_entry.rs  main.rs  mqtt.rs  orchestrator.rs
src/metrics/: aggregator.rs  collector.rs  mod.rs  publisher.rs  socket.rs
src/sources/: crashdump.rs  journald.rs  mod.rs  syslog.rs
systemd/: spotflowd.service
yocto/meta-spotflow/conf/: layer.conf
yocto/meta-spotflow/recipes-connectivity/spotflowd/: spotflowd_0.1.0.bb
yocto/meta-spotflow/recipes-connectivity/spotflowd/files/: spotflowd.init
